# Garden

./: README.md  pyproject.toml
Garden/: __init__.py
Garden/augment/img/: __init__.py  checker.py  scenario.py
Garden/augment/img/color/: base.py
Garden/augment/img/geometric/: __init__.py  base.py  distortion.py  frame.py  geometric.py
Garden/augment/img/mask/: mask.py
Garden/dl/idx_dict/: __init__.py  keys.py  make_dict.py
Garden/dl/loader/: __init__.py  classification.py  helper.py
Garden/dl/metrics/: classification.py
Garden/dl/model/: __init__.py  fine_tuning.py  optimizer.py  vision.py
Garden/dl/pipeline/: pipeline.py
Garden/dl/pipeline/fit/: __init__.py  classification.py  utils.py
Garden/statics/: __init__.py  descript.py  distribution.py  probability.py  scaler.py  utils.py
Garden/utils/: __init__.py  module.py  path.py  utils.py
Garden/utils/data/: get.py  utils.py
Garden/utils/db/: postgresql.py
Garden/utils/img/: __init__.py  img.py  viewer.py
Garden/utils/log/: __init__.py  dl.py  progressbar.py
Garden/utils/process/: __init__.py  dl.py  process.py
Garden/utils/txt/: txt.py
sample_code/: p00_sample_data.ipynb  p0_sample_data.ipynb
sample_data/: testbed.ipynb
sample_data/image/coco/: README.md  sample_annotaions.json
sample_data/rawdata/: metadata.json
sample_data/source/tabular/: student-mat.pickle  student-por.pickle
sample_data/tabular/: student-mat.pickle  student-por.pickle
