[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Garden"
version = "0.1.1.dev0"
description = "This Python-based framework integrates various data analysis techniques, including statistics, deep learning, and machine learning, enabling users without coding knowledge to easily utilize them through an intuitive graphical user interface (GUI)."
readme = { file = "README.md", content-type = "text/markdown" }
license = {file = "LICENSE.txt"}
authors = [
  { name="gingerGarden", email="gooopylim@gmail.com" },
]
dependencies = [
    "pandas>=2.2.0,<3.0.0",                     # pandas는 주로 메이저 버전 간 호환성이 깨짐, 상위 제한을 조금 여유롭게 설정
    "numpy>=1.21.0,<2.0.0",                     # 최신 기능과 호환성을 위해 최소 버전 상향
    "opencv-python-headless>=4.10.0,<5.0.0",    # 메이저 업데이트에 대비하여 5.0.0 미만으로 설정
    "PyGithub>=2.4.0,<2.6.0",                   # 최신 기능 추가와 패치 업데이트를 수용
    "matplotlib>=3.9.0,<4.0.0",                 # 버전 충돌 방지를 위해 적당한 상한 설정
    "torch>=2.5.1,<2.6.0",                      # PyTorch는 메이저 업데이트에 민감, 상위 제한 유지
    "torchaudio>=2.5.1,<2.6.0",                 # torch와 버전 일치
    "torchvision>=0.20.1,<0.21.0",              # torch와 버전 일치
    "timm>=1.0.11,<1.1.0",                      # 잠재적인 패치 버전 업데이트 허용
    "torch-optimizer>=0.3.0,<0.4.0",            # 패치 버전 업데이트 허용
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Repository" = "https://github.com/gingerGarden/Garden"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0"
]